# code-quality-toolkit

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  calculator.py  info.txt  parzival3301.md  text.txt
ARCH/: README.md
DEV/code_quality_toolkit/: .gitignore  CHANGES_duplication.diff  CHANGES_duplication.patch  CHANGES_duplication_annotated.diff  CHANGES_duplication_fixed.patch  CHANGES_duplication_generated.patch  CHANGES_duplication_revert.patch  DOCS_TEMPLATE.md  HOWTO.md  Makefile  README.md  plugin_complexity.json  pyproject.toml  report.html  report.json  report.md  toolkit.toml
DEV/code_quality_toolkit/examples/sample_project/: import.py  main.py  utils.py  vulnerable.py
DEV/code_quality_toolkit/tests/: test_cli_e2e.py  test_contracts.py  test_plugin_complexity.py  test_plugin_duplication.py  test_plugin_style.py
DEV/code_quality_toolkit/tests/cli/: test_cli_e2e.py
DEV/code_quality_toolkit/tests/core/: test_aggregator.py  test_cli.py  test_engine.py  test_exporters.py  test_loader.py
DEV/code_quality_toolkit/tests/integration/: ANALISE_REDUNDANCIA.md  ARCHITECTURE_AND_DESIGN.md  COMPLEXITY_AND_VALIDATION.md  DELIVERY.md  EXAMPLES.md  FINAL_SUMMARY.md  INDEX.md  INDICE_VISUAL.md  QUICK_START.md  README.md  README_INTEGRATION_TESTS.md  SUMARIO_FINAL.md  SUMMARY_COMPLEXITY.md  TECHNICAL_ANALYSIS.md  TLDR.md  __init__.py  conftest.py  test_cli_failure.py  test_integration_style_checker.py  test_metrics_integration.py  test_plugins_integration.py
DEV/code_quality_toolkit/web/: SPEC.md  __init__.py  app_stub.py  client.py  report.json  server.py
(+234 files in other folders)
